Uploaded all the files as symlinks instead of the real things :(

--- a/QoL/Character Sheet Profiles/GCA Prime Sheet-PhoenixLike.prefs
+++ b/QoL/Character Sheet Profiles/GCA Prime Sheet-PhoenixLike.prefs
@@ -1,1 +1,317 @@
-Y:/Users/Daisy/Documents/GURPS Character Assistant 5/GCA Prime Sheet-PhoenixLike.prefs
+﻿// This is a managed settings file, please be careful if you edit it manually.
+
+// Comments are slash-slash-space; other whitespace characters do not count.
+// Any comments you add outside of a section (such as this block) will be lost.
+// Comments you add may have their positioning adjusted.
+// Any empty sections will be removed.
+
+// These sections may be found below:
+// 	Line #	Section
+// 	13	GCA Prime Sheet
+// 	158	GCA Prime Sheet:PhoenixLike
+
+[GCA Prime Sheet]
+PageOrientation = None
+ColumnsPerPage = 2
+FullWidthBlocksAfterColumn1StartNewPage = No
+SheetFont = Calibri|10|False|False|False|False
+SheetTextColor = Color [Black]
+UserFont = Cambria|10|False|False|False|False
+UserTextColor = Color [Blue]
+UserDimTextColor = Color [LightCoral]
+UserBonusesFont = Calibri|8|False|False|False|False
+UserBonusesColor = Color [Bisque]
+LineBefore = Yes
+SolidNotDotted = No
+ShadeAltLines = Yes
+BoxBands = Yes
+EnclosePointsInBrackets = Yes
+NoPointsAnywhere = No
+ScaleWeightValues = Yes
+MonochromeColors = No
+MonochromeBoxColor = Color [Black]
+MonochromeAltItemColor = Color [Beige]
+MonochromeAltItemColorTransparency = 4
+MonochromeTraitIcons = No
+Page1_TopLine = General Info only
+Page1_Portrait = At the very top
+Page1_PortraitNoEmptyBlock = Yes
+TopAttributes_LargerSize = Yes
+TopAttributes_IncludeSizeModifier = No
+TopAttributes_IncludeTL = No
+TopAttributes_PrintLogo = No
+TopAttributes_LogoOnLeft = No
+TopGenInfo_DoNotIncludeRow1 = No
+TopGenInfo_IncludeRace = No
+TopGenInfo_IncludeSizeModifier = No
+TopGenInfo_IncludePoints = Yes
+TopGenInfo_IncludeDamage = No
+TopGenInfo_IncludeTL = No
+TopGenInfo_Shading = By item
+TopGenInfo_Lines = Whole row
+TopGenInfo_PrintLogo = No
+TopGenInfo_LogoOnLeft = Yes
+Logo_Usage = GCA Prime logo
+LogoFile = gurps logo.bmp
+SelectedBandsOrder = Attributes - OCS Style|Basics - OCS Style|Perception|Status Checks|Active Defenses|Encumbrance & Move|Reaction Modifiers|Feats Of Strength|Languages|Cultures|Advantages|Perks|Disadvantages|Quirks|Features|Templates|Skills|Spells|New Column|Equipment|Loadouts|Transforms|Points Summary|Melee Attacks [Full Width]|Ranged Attacks [Full Width]|Speed Range Table|Hit Locations|Backgound [Special]|Grimoire [Full Width]
+BandColumns_GutterWidth = Standard
+BandColumns_LineBetween = No
+BandColumns_Attributes = 1
+BandColumns_AdditionalAttributes = 1
+BandColumns_FeatsOfStrength = 1
+BandColumns_Perception = 1
+BandColumns_StatusChecks = 1
+BandColumns_Languages = 1
+BandColumns_Cultures = 1
+BandColumns_Advantages = 1
+BandColumns_Perks = 1
+BandColumns_Disadvantages = 1
+BandColumns_Quirks = 1
+BandColumns_Features = 1
+BandColumns_Templates = 1
+BandColumns_Skills = 1
+BandColumns_Spells = 1
+BandColumns_Equipment = 1
+AttributesOCS_LargestFonts = Yes
+AttributesOCS_BoxStyle = Yes
+AttributesOCS_CurrentBox = No
+AttributesOCS_NoBoundingBox = Yes
+AttributesOCS_NoFootnoteLine = Yes
+AttributesOCS_NoAltShades = No
+Basics_Shading = No
+Basics_Lines = User data
+Basics_NoBoundingBox = Yes
+Basics_SeparationLine = Yes
+GeneralInfo_Thinner = No
+PointsSummarized = Yes
+PointsShowUnspent = Yes
+Move_GCAShading = Yes
+Move_OverrideEncColor = No
+Move_EncShadeColor = Color [ForestGreen]
+Move_EncBorderColor = Color [ForestGreen]
+PointsOnGrimoire = Yes
+ShowWhereColumn = No
+DecimalAlignWeights = Yes
+DecimalAlignCosts = No
+ShowBonuses = 1|1|1|1|1|1|1|1|1|0|1|1
+ShowConditionals = 1|1|1|1|1|1|1|1|1|1|1|1
+UseColumnNotes = Yes
+UseBlockNotes = No
+CapacityMetersShow = No
+CapacityMetersThinner = Yes
+UseTraitIcons = Yes
+ShowPageNums = Yes
+PageFencing = 1
+ShowExtraSkillRolls = 1|1|1|1|1|1|1|1|1|1|1|1
+ShowUserNotes = 1|1|1|1|1|1|1|1|1|1|1|1
+ShowDescriptions = 0|0|0|0|0|0|0|0|0|0|0|0
+ShowHidden = 0|0|0|0|0|0|0|0|0|0|0|0
+ShowComponents = 0|0|0|0|0|0|0|0|0|0|0|0
+GroupingHeaderStyle = Subheads
+GroupingHeaderExtraSpacing = A little more
+GroupingRestartsAltLines = Yes
+PrintBiteKickPunch = Yes
+PrintAttackNotes = Yes
+ShowMinST = Yes
+ShowSkillParry = Yes
+ShowShieldBlockParry = Yes
+ShowRangedLevel = Yes
+ShowLevelSecond = Yes
+HiliteAttackLevelColumn = Yes
+HiliteAttackLevelColor = Color [PeachPuff]
+HiliteDamageColumn = Yes
+HiliteDamageColor = Color [PeachPuff]
+HitTableShowRoll = Yes
+HitTableShowDR = Yes
+HitTableShowNotes = No
+HitTableShowFootNotes = No
+HitTableShowWhenFewerNotes = No
+UseActiveShieldForBlock = Yes
+ActiveShieldArcImageForBlock = Yes
+DBMessage = Yes
+ShieldArcUpsize = Yes
+BandLoadoutsStyle = New block for each
+BandTransformsStyle = Single block with group headers
+PrintBackgroundPortrait = Yes
+PrintBackgroundAppearance = No
+PrintBackgroundDescription = No
+PrintBackgroundNotes = No
+GraphicHeader = None
+HeaderCustom = No
+HeaderLeft = [[Character]]
+HeaderCenter = Page [[PageNo]] of [[PageCount]].
+HeaderRight = http://www.sjgames.com/gurps/characterassistant/
+HeaderSepLineScheme = None
+FooterCustom = No
+FooterLeft = [[Character]]
+FooterCenter = Page [[PageNo]] of [[PageCount]].
+FooterRight = http://www.sjgames.com/gurps/characterassistant/
+FooterSepLineScheme = None
+EditFieldAllowFields = Yes
+EditFieldAllowButtons = No
+EditFieldDrawBox = Yes
+EditFieldBoxColor = Color [Fuchsia]
+EditFieldShade = Yes
+EditFieldShadeColor = Color [LimeGreen]
+EditFieldShadeTransparency = 2
+
+[GCA Prime Sheet:PhoenixLike]
+PageOrientation = None
+ColumnsPerPage = 2
+FullWidthBlocksAfterColumn1StartNewPage = No
+SheetFont = Calibri|10|False|False|False|False
+SheetTextColor = Color [Black]
+UserFont = Cambria|10|False|False|False|False
+UserTextColor = Color [Blue]
+UserDimTextColor = Color [NavajoWhite]
+UserBonusesFont = Calibri|8|False|False|False|False
+UserBonusesColor = Color [Black]
+LineBefore = Yes
+SolidNotDotted = No
+ShadeAltLines = Yes
+BoxBands = Yes
+EnclosePointsInBrackets = Yes
+NoPointsAnywhere = No
+ScaleWeightValues = Yes
+MonochromeColors = No
+MonochromeBoxColor = Color [Black]
+MonochromeAltItemColor = Color [NavajoWhite]
+MonochromeAltItemColorTransparency = 4
+MonochromeTraitIcons = No
+Page1_TopLine = General Info only
+Page1_Portrait = Below any TopLine options
+Page1_PortraitNoEmptyBlock = Yes
+TopAttributes_LargerSize = Yes
+TopAttributes_IncludeSizeModifier = No
+TopAttributes_IncludeTL = No
+TopAttributes_PrintLogo = No
+TopAttributes_LogoOnLeft = No
+TopGenInfo_DoNotIncludeRow1 = No
+TopGenInfo_IncludeRace = No
+TopGenInfo_IncludeSizeModifier = No
+TopGenInfo_IncludePoints = Yes
+TopGenInfo_IncludeDamage = No
+TopGenInfo_IncludeTL = No
+TopGenInfo_Shading = By item
+TopGenInfo_Lines = Whole row
+TopGenInfo_PrintLogo = No
+TopGenInfo_LogoOnLeft = No
+Logo_Usage = As specified below
+LogoFile = aldris.png
+SelectedBandsOrder = Attributes - OCS Style|Basics - OCS Style|Active Defenses|Perception|Status Checks|Encumbrance & Move|Reaction Modifiers|Feats Of Strength|Languages|Cultures|Advantages|Perks|Disadvantages|Quirks|Features|Templates|Skills|Spells|New Page|Equipment|Loadouts|Transforms|Melee Attacks [Full Width]|Ranged Attacks [Full Width]|Active Defenses|Speed Range Table|New Column|Hit Locations
+BandColumns_GutterWidth = Minimal
+BandColumns_LineBetween = Thin
+BandColumns_Attributes = 1
+BandColumns_AdditionalAttributes = 1
+BandColumns_FeatsOfStrength = 1
+BandColumns_Perception = 1
+BandColumns_StatusChecks = 1
+BandColumns_Languages = 1
+BandColumns_Cultures = 1
+BandColumns_Advantages = 1
+BandColumns_Perks = 1
+BandColumns_Disadvantages = 1
+BandColumns_Quirks = 1
+BandColumns_Features = 1
+BandColumns_Templates = 1
+BandColumns_Skills = 1
+BandColumns_Spells = 1
+BandColumns_Equipment = 1
+AttributesOCS_LargestFonts = Yes
+AttributesOCS_BoxStyle = No
+AttributesOCS_CurrentBox = No
+AttributesOCS_NoBoundingBox = No
+AttributesOCS_NoFootnoteLine = No
+AttributesOCS_NoAltShades = No
+Basics_Shading = No
+Basics_Lines = User data
+Basics_NoBoundingBox = Yes
+Basics_SeparationLine = Yes
+GeneralInfo_Thinner = No
+PointsSummarized = Yes
+PointsShowUnspent = Yes
+Move_GCAShading = Yes
+Move_OverrideEncColor = No
+Move_EncShadeColor = Color [ForestGreen]
+Move_EncBorderColor = Color [FloralWhite]
+PointsOnGrimoire = Yes
+ShowWhereColumn = No
+DecimalAlignWeights = Yes
+DecimalAlignCosts = No
+ShowBonuses = 1|1|1|1|1|1|1|1|1|0|0|1
+ShowConditionals = 1|1|1|1|1|1|1|1|1|1|0|1
+UseColumnNotes = No
+UseBlockNotes = No
+CapacityMetersShow = Yes
+CapacityMetersThinner = No
+UseTraitIcons = Yes
+ShowPageNums = Yes
+PageFencing = 1
+ShowExtraSkillRolls = 1|1|1|1|1|1|1|1|1|1|0|1
+ShowUserNotes = 1|1|1|1|1|1|1|1|1|1|1|1
+ShowDescriptions = 0|0|0|0|0|0|0|0|0|0|0|1
+ShowUses = 0|0|0|0|0|0|0|0|0|0|0|0
+ShowUsesInlineTextBoxes = Yes
+ShowHidden = 0|0|0|0|0|0|0|0|0|0|0|0
+ShowComponents = 0|0|0|0|0|0|0|0|0|0|0|0
+GroupingHeaderStyle = Subheads
+GroupingHeaderExtraSpacing = A little more
+GroupingRestartsAltLines = Yes
+PrintBiteKickPunch = Yes
+PrintAttackNotes = Yes
+ShowMinST = Yes
+ShowSkillParry = Yes
+ShowShieldBlockParry = Yes
+ShowRangedLevel = Yes
+ShowLevelSecond = Yes
+HiliteAttackLevelColumn = Yes
+HiliteAttackLevelColor = Color [PeachPuff]
+HiliteDamageColumn = Yes
+HiliteDamageColor = Color [PeachPuff]
+HitTableShowRoll = Yes
+HitTableShowDR = Yes
+HitTableShowNotes = Yes
+HitTableShowFootNotes = Yes
+HitTableShowWhenFewerNotes = Yes
+UseActiveShieldForBlock = Yes
+ActiveShieldArcImageForBlock = Yes
+DBMessage = Yes
+ShieldArcUpsize = Yes
+BandLoadoutsStyle = New block for each
+BandTransformsStyle = Single block with group headers
+PrintBackgroundPortrait = No
+PrintBackgroundAppearance = No
+PrintBackgroundDescription = No
+PrintBackgroundNotes = Yes
+GraphicHeader = None
+HeaderCustom = No
+HeaderLeft = [[Character]]
+HeaderCenter = Page [[PageNo]] of [[PageCount]].
+HeaderRight = http://www.sjgames.com/gurps/characterassistant/
+HeaderSepLineScheme = None
+FooterCustom = No
+FooterLeft = [[Character]]
+FooterCenter = Page [[PageNo]] of [[PageCount]].
+FooterRight = http://www.sjgames.com/gurps/characterassistant/
+FooterSepLineScheme = None
+EditFieldAllowFields = Yes
+EditFieldAllowButtons = Yes
+EditFieldDrawBox = Yes
+EditFieldBoxColor = Color [Fuchsia]
+EditFieldShade = Yes
+EditFieldShadeColor = Color [LimeGreen]
+EditFieldShadeTransparency = 1
+ShowDescriptionsAlwaysWhenHighlighted = any color
+ShowDescriptionsAsPlainText = No
+ShowUserNotesAlwaysWhenHighlighted = no
+ShowUserNotesAsPlainText = No
+TopAttributes_UserAttributeListUsage = Append them to the default items
+TopAttributes_UserAttributeList = Threshold,Recovery Rate
+AttributesOCS_UserAttributeListUsageChunk1 = Don't use them
+AttributesOCS_UserAttributeListChunk1 = ST, DX, IQ, HT
+AttributesOCS_UserAttributeListUsageChunk2 = Don't use them
+AttributesOCS_UserAttributeListChunk2 = Hit Points|HP|CURRENT, Will, Perception|Per, Fatigue Points|FP|CURRENT
+Transforms_ExcludeFromLists = No
+PrintCampaignLog = No
+PrintCampaignLogTotals = No
+PrintCampaignLogNoRTF = No
